2008-05-23  Tor Lillqvist  <tml@novell.com>

	* gdk/win32/gdkwindow-win32.c (update_style_bits): Don't do
	anything if style doesn't change. Improve debugging output.

2008-05-23  Michael Natterer  <mitch@gimp.org>

	* perf/widgets.h
	* tests/print-editor.c
	* tests/prop-editor.h
	* tests/testmountoperation.c
	* tests/testmultidisplay.c
	* tests/testnouiprint.c
	* tests/testprint.c
	* tests/testprintfileoperation.h
	* tests/testtreesort.c
	* tests/textbuffertest.c: include <gtk/gtk.h> instead of single
	files. Remove some redundant includes.

2008-05-22  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	* gtk/gtksockget.c: (gtk_socket_realize): Remove second call of
	GTK_WIDGET_SET_FLAGS (widget, GTK_REALIZED).

2008-05-21  Richard Hult  <richard@imendio.com>

	* gdk/quartz/gdkwindow-quartz.c:
	(_gdk_window_new), (_gdk_window_reparent): Renamed to adapt to the
	offscreen rendering changes, fixes build.

2008-05-21 21:10:15  Tim Janik  <timj@imendio.com>

	* gtk/gtkwidget.h: added GdkRectangle *clip_rect to gtk_widget_get_snapshot().

	* gtk/gtkwidget.c: clip the returned snapshot pixmap to clip_rect.
	return snapshot pixmap coordinates widget relative in *clip_rect.

	* tests/testgtk.c: fixed bogus NULL pointer unref.

2008-05-21 21:04:28  Tim Janik  <timj@imendio.com>

	* gtk/gtkwidget.c gtk_widget_get_snapshot(): grow snapshot area from
	widget's allocation to cover extra widget windows placed outside the
	widget allocation (spinbutton arrows are the prime example for this).

2008-03-18 10:49:20  Tim Janik  <timj@imendio.com>

	* Applied pixmap redirection patch by Alexander Larsson with
	various updates from:
	Bug 318807 – Offscreen windows and window redirection.


	Updates:

	* updated docs to mention "Since 2.16".

	* tests/testgtk.c: fixed snapshooting pixmap leak.
	convert pixmap to pixbuf after snapshooting, to compensate for different
	bit depths (occurs when snapshooting ARGB visuals and displaying the
	pixmap in an RGB visual).
