@@ -687,6 +687,8 @@ gdk_window_set_user_data
 gdk_window_thaw_toplevel_updates_libgtk_only
 gdk_window_thaw_updates
 gdk_window_set_composited
+gdk_window_redirect_to_drawable
+gdk_window_remove_redirection
 #endif
 #endif
 
