@@ -4816,6 +4816,7 @@ gtk_widget_unmap
 gtk_widget_unparent
 gtk_widget_unrealize
 gtk_widget_unref
+gtk_widget_get_snapshot
 #endif
 #endif
 
